<resources>
    <string name="app_name">PokemonApp</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="types">Types</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No Internet connection</string>
</resources>