<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pokemon"
    android:orientation="vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:layout_margin="@dimen/dp_16"
        android:backgroundTint="@color/transparent_blue"
        app:elevation="@dimen/dp_0"
        app:fabSize="normal"
        app:pressedTranslationZ="@dimen/dp_0"
        app:srcCompat="@drawable/ic_back_button"
        app:tint="@color/white"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_60"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_250"
        android:background="@drawable/bg_rounded_button"
        android:fontFamily="@font/finger_paint"
        android:text="@string/no_internet_connection"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/customConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_400"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="@drawable/style_card_view"
        android:orientation="vertical">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerImage"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imagePokemonImageView"
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_200"
                android:background="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/nameUnusefulTextView"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_170"
            android:fontFamily="@font/finger_paint"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerName"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameUnusefulTextView">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="@dimen/dp_200"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:fontFamily="@font/finger_paint"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameUnusefulTextView" />

        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/heightUnusefulTextView"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_170"
            android:fontFamily="@font/finger_paint"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/height"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerHeight"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heightUnusefulTextView">

            <TextView
                android:id="@+id/heightTextView"
                android:layout_width="@dimen/dp_200"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:fontFamily="@font/finger_paint"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_25"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heightUnusefulTextView" />

        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/weightUnusefulTextView"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:fontFamily="@font/finger_paint"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/weight"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shimmerName" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerWeight"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weightUnusefulTextView">

            <TextView
                android:id="@+id/weightTextView"
                android:layout_width="@dimen/dp_200"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:fontFamily="@font/finger_paint"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weightUnusefulTextView" />

        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/typeUnusefulTextView"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:fontFamily="@font/finger_paint"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/types"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shimmerHeight" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerTypes"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeUnusefulTextView">

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="@dimen/dp_200"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:fontFamily="@font/finger_paint"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_25"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/typeUnusefulTextView" />

        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>